<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#212121"
    android:orientation="vertical"
    android:padding="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp">

        <RadioGroup
            android:id="@+id/rg_keyboard"
            android:layout_width="150dp"
            android:layout_height="27dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbt_keyboard_1"
                style="@style/GameMenuRadioButton"
                android:text="@string/keyboard_full_pc" />

            <RadioButton
                android:id="@+id/rbt_keyboard_2"
                style="@style/GameMenuRadioButton"
                android:text="@string/keyboard_numeric" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/btn_combination"
            android:layout_width="70dp"
            android:layout_height="27dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/rg_keyboard"
            android:background="@drawable/ic_game_menu_btn_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/keyboard_chord_mode"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/btn_soft_phone"
            android:layout_width="70dp"
            android:layout_height="27dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn_combination"
            android:background="@drawable/ic_game_menu_btn_selector"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/keyboard_phone_ime"
            android:textColor="@android:color/white"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/iv_game_menu"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
            android:layout_toStartOf="@id/iv_down"
            android:contentDescription="@string/accessibility_open_game_menu"
            android:padding="6dp"
            android:src="@drawable/ic_menu_grid" />

        <ImageView
            android:id="@+id/iv_down"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/accessibility_collapse_keyboard"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_axi_down" />
    </RelativeLayout>

    <include
        android:id="@+id/lv_keyboard"
        layout="@layout/item_layout_axixi_keyboard"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <include
        android:id="@+id/lv_keyboard_digitpad"
        layout="@layout/item_layout_axixi_keyboard_digitpad"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone" />

</LinearLayout>
