<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="20dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/iv_game_virtual_pad"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/accessibility_virtual_controller"
        android:src="@drawable/ic_axi_game_pad_top_right" />

    <LinearLayout
        android:id="@+id/lv_right_view"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_game_virtual_add"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/ic_game_menu_btn_green"
            android:padding="4dp"
            android:text="@string/keyboard_add_button"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_game_virtual_reset"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/ic_game_menu_btn_normal"
            android:padding="4dp"
            android:text="@string/keyboard_reset_layout"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_game_virtual_save"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/ic_game_menu_btn_press"
            android:padding="4dp"
            android:text="@string/keyboard_save_layout"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>
