<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gameMenuBgColor"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_game_menu_btn_side_selector"
            android:contentDescription="@string/accessibility_back"
            android:src="@drawable/ic_axi_back" />

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/ibtn_back"
            android:layout_toStartOf="@id/btn_reset"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/keyboard_chord_title"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_reset"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/btn_right"
            android:background="@drawable/ic_game_menu_btn_side_selector"
            android:gravity="center"
            android:text="@string/keyboard_clear"
            android:textColor="@android:color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_right"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_game_menu_btn_side_selector"
            android:gravity="center"
            android:text="@string/keyboard_save"
            android:textColor="@android:color/white"
            android:textSize="11sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@id/edt_name"
            android:text="@string/keyboard_key_name"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_game_menu_btn_selector"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="24"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:text="@string/keyboard_chord_value"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/keyboard_chord_value_hint"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_keyboard"
        style="@style/GameMenuRadioGroup">

        <RadioButton
            android:id="@+id/rbt_keyboard_1"
            style="@style/GameMenuRadioButton"
            android:text="@string/keyboard_full_pc" />

        <RadioButton
            android:id="@+id/rbt_keyboard_2"
            style="@style/GameMenuRadioButton"
            android:text="@string/keyboard_numeric" />

        <RadioButton
            android:id="@+id/rbt_keyboard_3"
            style="@style/GameMenuRadioButton"
            android:text="@string/keyboard_mouse_and_wheel" />

        <RadioButton
            android:id="@+id/rbt_keyboard_4"
            style="@style/GameMenuRadioButton"
            android:text="@string/keyboard_function_keys" />
    </RadioGroup>

    <include
        android:id="@+id/lv_keyboard"
        layout="@layout/item_layout_axixi_keyboard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/keyboard_view_height"
        android:visibility="visible" />

    <include
        android:id="@+id/lv_keyboard_digitpad"
        layout="@layout/item_layout_axixi_keyboard_digitpad_add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/keyboard_view_height"
        android:visibility="gone" />

    <GridView
        android:id="@+id/rv_keyboard_mouse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/keyboard_view_height"
        android:background="#212121"
        android:horizontalSpacing="3dp"
        android:numColumns="4"
        android:padding="3dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp"
        android:visibility="gone" />

    <GridView
        android:id="@+id/rv_keyboard_function"
        android:layout_width="match_parent"
        android:layout_height="@dimen/keyboard_view_height"
        android:background="#212121"
        android:horizontalSpacing="3dp"
        android:numColumns="4"
        android:padding="3dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp"
        android:visibility="gone" />
</LinearLayout>
